Sun Aug  3 10:57:55 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/comp_src.h.in: Protect against multiple inclusions.

Sat Aug  2 19:32:04 BST 2003  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Document the recent security fixes.

Sat Aug  2 12:31:24 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/error.c (error_print_progname): Use a proper prototype.

Sat Aug  2 01:23:08 BST 2003  Colin Watson  <cjwatson@debian.org>

	* tools/checkman: Tolerate spaces in NAME sections, since they occur
	  in practice and confused checkman before this. Prompted by a
	  question from James B. Hiller.

Fri Aug  1 22:06:33 BST 2003  Colin Watson  <cjwatson@debian.org>

	Fix vulnerability due to over-permissiveness of DEFINE directive.

	* src/manp.c (DEFINE_USER): New list flag.
	  (get_def): Note that this must not return DEFINEs set in
	  ~/.manpath.
	  (get_def_user): New function, which may return DEFINEs set in
	  ~/.manpath.
	  (add_def): Use DEFINE or DEFINE_USER depending on context.
	  (add_to_dirlist): Update call to add_def().
	* src/manp.h (get_def_user): Add prototype.

	* src/man.c (main): pager and cat are safe for the user to define.
	  (make_display_command): cat, tr, and decompressor are safe.
	* src/straycats.c (check_for_stray): col and decompressor are safe.
	* src/whatis.c (use_grep): whatis_grep_flags,
	  apropos_regex_grep_flags, apropos_grep_flags, and grep are safe.

Fri Aug  1 01:32:37 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (main): Minor whitespace cleanups.

Fri Aug  1 01:05:42 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (mkcatdirs): Allocate manname and catname dynamically.

Wed Jul 30 22:28:13 BST 2003  Colin Watson  <cjwatson@debian.org>

	Fix vulnerability 4 posted by Vade 79 <v9@fakehalo.deadpig.org> on
	BugTraq, Message-ID:
	<20030729210308.15518.qmail@www.securityfocus.com>. This fix is just
	a stopgap measure for now; proper list handling will be added later.
